Add delete files saved and save file

--- a/system_data/languages/es.json
+++ b/system_data/languages/es.json
@@ -45,7 +45,16 @@
         "LOAD_DATA": "Cargar datos",
         "SAVE_DATA": "Guardar datos",
         "RESET_DATA": "Resetear datos",
+        "DELETE_DATA": "Eliminar datos guardados",
         "ALERT_MESSAGE": "Los datos sin guardar se perderán. ¿Esta seguro que desea realizar esta acción?",
+        "LOAD_DATA_MESSAGE": "Seleccione los datos que desea cargar",
+        "DATA_NOT_FOUND": "No hay datos guardados",
+        "SAVE_DATA_MESSAGE": "Seleccione en qué espacio desea guardar los datos",
+        "DELETE_DATA_MESSAGE": "Selecciona que datos desea eliminar",
+        "DELETE_DATA_COMPLETE": "Eliminación de datos completada",
+        "NEW_SLOT": "Nuevo espacio de guardado",
+        "SAVE_NAME": "Introduzca identificador para el guardado (3 - 14 caracteres)",
+        "SAVE_NAME_ERROR": "El identificador ya existe o no cumple con los requisitos indicados",
         "YES": "Si",
         "NO": "No",
         "EXIT": "Salir"
